--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "react-native-floating-panel",
   "version": "1.0.2",
   "description": "React Native Floating Swipeable Panel",
-  "main": "lib/index.js",
-  "types": "lib",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
+  "module": "dist/index.js",
   "repository": "https://github.com/kim-macbook/react-native-floating-panel.git",
   "author": "kim-macbook <creator@hanyang.ac.kr>",
   "license": "MIT",
@@ -18,6 +20,6 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc"
   }
 }
