--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "npm": "npm version patch && npm publish"
   }
 }
