--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "metro-react-native-babel-preset": "^0.61.0",
     "typescript": "^3.9.7"
   },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-native": "^0.63.2"
+  },
   "scripts": {
     "build": "tsc",
     "build:types": "tsc --emitDeclarationOnly",
     "npm": "npm version patch && npm publish"
-  },
-  "peerDependencies": {
-    "react": "^16.13.1",
-    "react-native": "^0.63.2"
   }
 }
