--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "metro-react-native-babel-preset": "^0.61.0",
     "typescript": "^3.9.7"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.13.1",
     "react-native": "^0.63.2"
   },
