--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "react": "^16.13.1",
     "react-native": "^0.63.2"
   },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-native": "^0.63.2"
+  },
   "scripts": {
     "build": "rm -rf ./dist && tsc"
   }
